--- a/index.html
+++ b/index.html
@@ -88,21 +88,23 @@
         </div>
 
         </div>
+
+  
     
         <div class="secundaria">
-            <div class="mcdelivery">
-
+            <div class="itemdonalds">
+               <h2>McDelivery</h2>
             </div>
-            <div class="mcsemfila">
-
+            <div class="itemdonalds">
+                <h2>Méqui Sem Fila</h2>
             </div>
-            <div class="cupons">
-
+            <div class="itemdonalds">
+                <h2>Cupons</h2>
             </div>
 
         </div>
-
-        </main>
+   
+    </main>
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
