--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <img src="img/mcdonalds-removebg-preview.png" alt="MEQUI" width="50px">
                 </div>
                 <div class="meucupons">
-                <i class="fas fa-ticket-alt" > </i>
+                <img src="/img/SVG/cupons side bar.svg" alt="Cupons-sidebar" width="35px" > 
             </div>
         </div>
         </header>
@@ -92,14 +92,15 @@
   
     
         <div class="secundaria">
+            
             <div class="itemdonalds">
-               <h2>McDelivery</h2>
+                <h2><img src="/img/SVG/Mcdeliveru.svg" alt="McDelivery" > McDelivery</h2>
             </div>
             <div class="itemdonalds">
-                <h2>Méqui Sem Fila</h2>
+                <h2> <img src="/img/SVG/Asset 2.svg" alt="Mequi sem fila"> Méqui Sem Fila</h2>
             </div>
             <div class="itemdonalds">
-                <h2>Cupons</h2>
+                <h2> <img src="/img/SVG/Asset 3.svg" alt="Cupons"> Cupons</h2>
             </div>
 
         </div>
