--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style/main.css">
 
+        <!-- Favicon -->
+
+
+<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16ofc.png">
+
+        <!-- Favicon -->
+
         <!--Owl Css-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
@@ -21,6 +28,7 @@
                     <input type="checkbox" id="btn" hidden>
                     <label for="btn" class="menu-btn">
                         <i class="fas fa-bars"></i>
+                        <i class="fas fa-times"></i>
                   
                     </label>
             
