--- a/index.html
+++ b/index.html
@@ -38,19 +38,13 @@
                         <li><a href="#"><i class="fas fa-home"></i>Início</a></li>
                         <li><a href="#"><i class="fas fa-sliders-h"></i>McDelivery</a></li>
                         <li><a href="#"><i class="fas fa-address-book"></i>Cupons</a></li>
-                        <li><a href="#"><i class="fas fa-cog"></i>Meus Cupons</a></li>
-                        <li><a href="#"><i class="fas fa-stream"></i>Stickers</a></li>
-                        <li><a href="#"><i class="fas fa-user"></i>Game Corrida Fantastica</a></li>
-                        <li><a href="#"><i class="fas fa-globe-asia"></i>Restaurantes</a></li>
-                        <li><a href="#"><i class="fas fa-envelope"></i>Cardápio</a></li>
-                        <li><a href="#"><i class="fas fa-envelope"></i>McExperiência</a></li>
-                        <li><a href="#"><i class="fas fa-envelope"></i>Gift Card</a></li>
-                        <li><a href="#"><i class="fas fa-envelope"></i>QR Code</a></li>
-                        <li><a href="#"><i class="fas fa-envelope"></i>Perfil</a></li>
-                        <li><a href="#"><i class="fas fa-envelope"></i>Configuração</a></li>
+                        <li><a href="#"><i class="fas fa-car"></i>Game Corrida Fantastica</a></li>
+                        <li><a href="#"><i class="fas fa-utensils"></i>Restaurantes</a></li>
+                        <li><a href="#"><i class="fas fa-book-open"></i>Cardápio</a></li>
+                        <li><a href="#"><i class="fas fa-user"></i>Perfil</a></li>
+                        <li><a href="#"><i class="fas fa-cog"></i>Configuração</a></li>
                         <li><a href="#"><i class="fas fa-envelope"></i>Privacidade</a></li>
-                        <li><a href="#"><i class="fas fa-envelope"></i>Institucional</a></li>
-                        <li><a href="#"><i class="fas fa-envelope"></i>Sobre o App</a></li>
+                        
 
                         <div class="icons">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
