--- a/index.html
+++ b/index.html
@@ -35,22 +35,20 @@
                 <nav id="sidebar">
                     <div class="title"></div>
                     <ul class="list-items">
-                        <li><a href="#"><i class="fas fa-home"></i>Início</a></li>
-                        <li><a href="#"><i class="fas fa-sliders-h"></i>McDelivery</a></li>
-                        <li><a href="#"><i class="fas fa-address-book"></i>Cupons</a></li>
-                        <li><a href="#"><i class="fas fa-car"></i>Game Corrida Fantastica</a></li>
-                        <li><a href="#"><i class="fas fa-utensils"></i>Restaurantes</a></li>
-                        <li><a href="#"><i class="fas fa-book-open"></i>Cardápio</a></li>
-                        <li><a href="#"><i class="fas fa-user"></i>Perfil</a></li>
-                        <li><a href="#"><i class="fas fa-cog"></i>Configuração</a></li>
-                        <li><a href="#"><i class="fas fa-envelope"></i>Privacidade</a></li>
+                        <li><a href="#"><img class="icons-sidebar" src="/img/SVG/casa-inicio.svg" alt="Casa inicio">Início</a></li>
+                        <li><a href="#"><img class="icons-sidebar" src="/img/SVG/Mcdeliveru.svg" alt="McDelivery">McDelivery</a></li>
+                        <li><a href="#"><img class="icons-sidebar" src="/img/SVG/cupom.svg" alt="Cupom">Cupons</a></li>
+                        <li><a href="#"><img class="icons-sidebar" src="/img/SVG/restaurantes.svg" alt="Restaurantes" >Restaurantes</a></li>
+                        <li><a href="#"><img class="icons-sidebar" src="/img/SVG/Cardapio.svg" alt="Cardápio">Cardápio</a></li>
+                        <li><a href="#"><img class="icons-sidebar" src="/img/SVG/Perfil.svg" alt="Perfil">Perfil</a></li>
+                        <li><a href="#"><img class="icons-sidebar" src="/img/SVG/Configuracao.svg" alt="Configuração">Configuração</a></li>
+                        <li><a href="#"><img class="icons-sidebar" src="/img/SVG/Segurança.svg" alt="Privacidade">Privacidade</a></li>
                         
 
                         <div class="icons">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
                             <a href="#"><i class="fab fa-github"></i></a>
-                            <a href="#"><i class="fab fa-youtube"></i></a>
+                            
                         </div>  
                         </ul>
 
@@ -102,7 +100,7 @@
                 <h2> <img src="/img/SVG/Asset 2.svg" alt="Mequi sem fila"> Méqui Sem Fila</h2>
             </div>
             <div class="itemdonalds">
-                <h2> <img src="/img/SVG/Asset 3.svg" alt="Cupons"> Cupons</h2>
+                <h2> <img src="/img/SVG/cupom.svg" alt="Cupons"> Cupons</h2>
             </div>
 
         </div>
