--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                     <div class="title"></div>
                     <ul class="list-items">
                         <li><a href="#"><img class="icons-sidebar" src="/img/SVG/casa-inicio.svg" alt="Casa inicio">Início</a></li>
-                        <li><a href="#"><img class="icons-sidebar" src="/img/SVG/Mcdeliveru.svg" alt="McDelivery">McDelivery</a></li>
-                        <li><a href="#"><img class="icons-sidebar" src="/img/SVG/cupom.svg" alt="Cupom">Cupons</a></li>
-                        <li><a href="#"><img class="icons-sidebar" src="/img/SVG/restaurantes.svg" alt="Restaurantes" >Restaurantes</a></li>
+                        <li><a href="#"><img class="icons-sidebar" src="/img/SVG/mcdelivery2.svg" alt="McDelivery">McDelivery</a></li>
+                        <li><a href="#"><img class="icons-sidebar" src="/img/SVG/cupom-pequeno.svg" alt="Cupom">Cupons</a></li>
+                        <li><a href="#"><img class="icons-sidebar" src="/img/SVG/restaurantes (2).svg" alt="Restaurantes" >Restaurantes</a></li>
                         <li><a href="#"><img class="icons-sidebar" src="/img/SVG/Cardapio.svg" alt="Cardápio">Cardápio</a></li>
                         <li><a href="#"><img class="icons-sidebar" src="/img/SVG/Perfil.svg" alt="Perfil">Perfil</a></li>
                         <li><a href="#"><img class="icons-sidebar" src="/img/SVG/Configuracao.svg" alt="Configuração">Configuração</a></li>
@@ -69,21 +69,29 @@
         <div class="owl-carousel owl-theme">
 
             <div class="item">
-                <img class="box-mc" src="img/107379742_3115835985130061_4606256345918457430_n.jpg" alt="McOferta Mcflurry">
+                <img class="box-mc" src="img/ofertas.jpg" alt="McOferta Mcflurry">
             </div>
             <div class="item">
-                <img class="box-mc" src="img/107439821_143452037365029_6945728115841679116_n.jpg" alt="Dia do Rock">
+                <img class="box-mc" src="img/diadorock.jpg" alt="Dia do Rock">
             </div>
             <div class="item">
-                <img class="box-mc" src="img/138632361_399802611312830_6979968580342039633_n.jpg" alt="Mclanche Feliz Soul">
+                <img class="box-mc" src="img/soulbrinquedos.jpg" alt="Mclanche Feliz Soul">
             </div>
             <div class="item">
-                <img class="box-mc" src="img/117865344_629376787954267_3164351988902370485_n.jpg" alt="Surpresa do Mc, novo molho">
+                <img class="box-mc" src="img/molhoespecial.jpg" alt="Surpresa do Mc, novo molho">
             </div>
             <div class="item">
-                <img class="box-mc" src="img/141122052_427279958390920_10967504326576612_n.jpg" alt="Clássico do dia">
+                <img class="box-mc" src="img/gifcardBBB.jpg" alt="gifcardBBB">
             </div>
             
+            <div class="item">
+                <img class="box-mc" src="img/bbboxLider.jpg" alt="bbbox do Lider">
+            </div>
+
+            <div class="item">
+                <img class="box-mc" src="img/batata.jpg" alt="batatas mc">
+            </div>
+
             
         </div>
 
@@ -97,7 +105,7 @@
                 <h2><img src="/img/SVG/Mcdeliveru.svg" alt="McDelivery" > McDelivery</h2>
             </div>
             <div class="itemdonalds">
-                <h2> <img src="/img/SVG/Asset 2.svg" alt="Mequi sem fila"> Méqui Sem Fila</h2>
+                <h2> <img src="/img/SVG/mequifila.svg" alt="Mequi sem fila"> Méqui Sem Fila</h2>
             </div>
             <div class="itemdonalds">
                 <h2> <img src="/img/SVG/cupom.svg" alt="Cupons"> Cupons</h2>
@@ -109,7 +117,7 @@
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<script src="https://kit.fontawesome.com/c294352ef3.js" crossorigin="anonymous"></script>
 <script src="js/owl/jquery.min.js"></script>
 <script src="js/owl/owl.carousel.min.js"></script>
 <script src="js/owl/main.js"></script>
